src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_AttributesOnComplexProperty.xaml

<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted"
>	
		<Button>
		    <cc:MyClass.MyColor xml:space="preserve">
		        <cc:MyColor />
		    </cc:MyClass.MyColor>
	        Hi there 
	    </Button>
</DockPanel>
</Page>
